--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
     <div class="backdrop">
         <div class="modal">
             <button class="modal-close-btn">
-                <svg class="modal-icon" width="" heigth="">
-                    <use href="">
+                <svg class="modal-icon" width="8" heigth="8">
+                    <use href="./images/icons.svg#icon-close.svg">
 
                     </use>
 
