--- a/portfolio.html
+++ b/portfolio.html
@@ -64,12 +64,20 @@
 
 
                     <li class="services-card">
-                        <a class="portfolio-link link" href="">
-                            <img src="./images/interface.jpg" alt="interface" width="360" height="300">
-                            <div class="text-card">
-                                <h2 class="title-portfolio">Banking App Interface Concept</h2>
-                                <p class="text-portfolio">App</p>
-                            </div>
+                        <div class="team-thumb">
+                            <a class="portfolio-link link" href="">
+                                <img src="./images/interface.jpg" alt="interface" width="360" height="300">
+                                <div class="overlay">
+                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                        Manager
+                                        App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                        Cloud Storage App</p>
+                                </div>
+                        </div>
+                        <div class="text-card">
+                            <h2 class="title-portfolio">Banking App Interface Concept</h2>
+                            <p class="text-portfolio">App</p>
+                        </div>
                         </a>
                     </li>
 
