--- a/portfolio.html
+++ b/portfolio.html
@@ -19,16 +19,16 @@
 <body>
     <!-- Header-->
     <header class="header">
-        <div class="header-cont container">
-            <nav class="header-cont">
+        <div class="header-nav container">
+            <nav class="header-nav">
 
                 <a href="./index.html" class="logo-web link">Web<span class="logo-studio">Studio</span></a>
 
 
                 <ul class="list-nav list">
-                    <li><a href="./index.html" class="link mag">Studio</a></li>
-                    <li><a href="./portfolio.html" class="link mag">Portfolio</a></li>
-                    <li><a href="" class="link mag">Contacts</a></li>
+                    <li class="header-link"><a class="link header-link-menu active" href="./index.html">Studio</a></li>
+                    <li class="header-link"><a href="./portfolio.html" class="link header-link-menu">Portfolio</a></li>
+                    <li class="header-link"><a href="" class="link header-link-menu">Contacts</a></li>
                 </ul>
 
             </nav>
@@ -36,7 +36,7 @@
             <address class="address">
 
                 <ul class="list-address list">
-                    <li> <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                     <li><a class="address-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
 
