--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,9 @@
 
 
                 <ul class="list-nav list">
-                    <li class="header-link"><a class="link header-link-menu active" href="./index.html">Studio</a></li>
-                    <li class="header-link"><a href="./portfolio.html" class="link header-link-menu">Portfolio</a></li>
+                    <li class="header-link"><a class="link header-link-menu" href="./index.html">Studio</a></li>
+                    <li class="header-link"><a href="./portfolio.html"
+                            class="link header-link-menu active">Portfolio</a></li>
                     <li class="header-link"><a href="" class="link header-link-menu">Contacts</a></li>
                 </ul>
 
@@ -64,20 +65,21 @@
 
 
                     <li class="services-card">
-                        <div class="team-thumb">
-                            <a class="portfolio-link link" href="">
+
+                        <a class="portfolio-link link" href="">
+                            <div class="overlay">
                                 <img src="./images/interface.jpg" alt="interface" width="360" height="300">
-                                <div class="overlay">
-                                    <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
-                                        Manager
-                                        App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
-                                        Cloud Storage App</p>
-                                </div>
-                        </div>
-                        <div class="text-card">
-                            <h2 class="title-portfolio">Banking App Interface Concept</h2>
-                            <p class="text-portfolio">App</p>
-                        </div>
+
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
+
+                            <div class="text-card">
+                                <h2 class="title-portfolio">Banking App Interface Concept</h2>
+                                <p class="text-portfolio">App</p>
+                            </div>
                         </a>
                     </li>
 
@@ -172,9 +174,9 @@
     <!--Footer-->
 
     <footer class="footer">
-        <div class="footer-box">
+        <div class="footer-box container">
 
-            <div class="footer-logo-box container">
+            <div class="footer-logo-box">
                 <a href="./index.html" class="web-footer link"> Web<span class="studio-footer">Studio</span></a>
 
                 <p class="title-footer"> Increase the flow of customers and sales for your business with digital
@@ -191,7 +193,7 @@
                         <a href="" class="footer-link link" target="_blank" rel="noopener noreferrent"
                             aria-label="icon-instagram">
                             <svg class="socials-icons-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram.svg"></use>
                             </svg></a>
                     </li>
 
@@ -199,7 +201,7 @@
                         <a href="" class=" footer-link link" target="_blank" rel="noopener noreferrent"
                             aria-label="icon-twitter">
                             <svg class="socials-icons-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter.svg"></use>
                             </svg></a>
                     </li>
 
@@ -207,7 +209,7 @@
                         <a href="" class=" footer-link link" target="_blank" rel="noopener noreferrent"
                             aria-label="icon-facebook">
                             <svg class="socials-icons-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook.svg"></use>
                             </svg></a>
                     </li>
 
@@ -215,7 +217,7 @@
                         <a href="" class="footer-link link" target="_blank" rel="noopener noreferrent"
                             aria-label="icon-linkedin">
                             <svg class="socials-icons-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin.svg"></use>
                             </svg></a>
                     </li>
                 </ul>
