--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
     <!--Footer-->
 
     <footer class="footer">
-        <div class="footer-box">
+        <div class="footer-box container">
 
-            <div class="footer-logo-box container">
+            <div class="footer-logo-box">
                 <a href="./index.html" class="web-footer link"> Web<span class="studio-footer">Studio</span></a>
 
                 <p class="title-footer"> Increase the flow of customers and sales for your business with digital
@@ -385,7 +385,7 @@
                         <a href="" class="footer-link link" target="_blank" rel="noopener noreferrent"
                             aria-label="icon-instagram">
                             <svg class="socials-icons-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram.svg"></use>
                             </svg></a>
                     </li>
 
@@ -393,7 +393,7 @@
                         <a href="" class=" footer-link link" target="_blank" rel="noopener noreferrent"
                             aria-label="icon-twitter">
                             <svg class="socials-icons-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter.svg"></use>
                             </svg></a>
                     </li>
 
@@ -401,7 +401,7 @@
                         <a href="" class=" footer-link link" target="_blank" rel="noopener noreferrent"
                             aria-label="icon-facebook">
                             <svg class="socials-icons-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook.svg"></use>
                             </svg></a>
                     </li>
 
@@ -409,7 +409,7 @@
                         <a href="" class="footer-link link" target="_blank" rel="noopener noreferrent"
                             aria-label="icon-linkedin">
                             <svg class="socials-icons-footer" width="24" height="24">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin.svg"></use>
                             </svg></a>
                     </li>
                 </ul>
@@ -418,11 +418,11 @@
     </footer>
     <!--Modal window-->
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal-close-btn" data-modal-close>
                 <svg class="modal-icon" width="8" heigth="8">
-                    <use href="./images/icons.svg#icon-close.svg">
+                    <use href="./images/icons.svg#icon-close">
                     </use>
                 </svg>
             </button>
