--- a/portfolio.html
+++ b/portfolio.html
@@ -87,7 +87,13 @@
 
                     <li class="services-card">
                         <a class="portfolio-link link" href="">
-                            <img src="./images/payment.jpg" alt="payment" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/payment.jpg" alt="payment" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="text-card">
                                 <h2 class="title-portfolio">Cashless Payment</h2>
                                 <p class="text-portfolio">Marketing</p>
@@ -96,8 +102,15 @@
                     </li>
 
                     <li class="services-card">
+
                         <a class="portfolio-link link" href="">
-                            <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/meditation.jpg" alt="meditation" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="text-card">
                                 <h2 class="title-portfolio">Meditation App</h2>
                                 <p class="text-portfolio">App</p>
@@ -107,7 +120,13 @@
 
                     <li class="services-card">
                         <a class="portfolio-link link" href="">
-                            <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/taxi.jpg" alt="taxi" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="text-card">
                                 <h2 class="title-portfolio">Taxi Service</h2>
                                 <p class="text-portfolio">Marketing</p>
@@ -117,7 +136,13 @@
 
                     <li class="services-card">
                         <a class="portfolio-link link" href="">
-                            <img src="./images/screen.jpg" alt="creens" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/screen.jpg" alt="creens" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="text-card">
                                 <h2 class="title-portfolio">Screen Illustrations</h2>
                                 <p class="text-portfolio">Design</p>
@@ -127,7 +152,13 @@
 
                     <li class="services-card">
                         <a class="portfolio-link link" href="">
-                            <img src="./images/courses.jpg" alt="courses" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/courses.jpg" alt="courses" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="text-card">
                                 <h2 class="title-portfolio">Online Courses</h2>
                                 <p class="text-portfolio">Marketing</p>
@@ -137,7 +168,13 @@
 
                     <li class="services-card">
                         <a class="portfolio-link link" href="">
-                            <img src="./images/instagram.jpg" alt="instagram" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/instagram.jpg" alt="instagram" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="text-card">
                                 <h2 class="title-portfolio">Instagram Stories Concept</h2>
                                 <p class="text-portfolio">Design</p>
@@ -147,7 +184,13 @@
 
                     <li class="services-card">
                         <a class="portfolio-link link" href="">
-                            <img src="./images/organic.jpg" alt="organic" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/organic.jpg" alt="organic" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="text-card">
                                 <h2 class="title-portfolio">Organic Food</h2>
                                 <p class="text-portfolio">Web Site</p>
@@ -157,7 +200,13 @@
 
                     <li class="services-card">
                         <a class="portfolio-link link" href="">
-                            <img src="./images/coffee.jpg" alt="coffee" width="360" height="300">
+                            <div class="overlay">
+                                <img src="./images/coffee.jpg" alt="coffee" width="360" height="300">
+                                <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task
+                                    Manager
+                                    App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
+                                    Cloud Storage App</p>
+                            </div>
                             <div class="text-card">
                                 <h2 class="title-portfolio">Fresh Coffee</h2>
                                 <p class="text-portfolio">Web Site</p>
