--- a/index.html
+++ b/index.html
@@ -420,8 +420,8 @@
 
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="modal-close-btn" data-modal-close>
-                <svg class="modal-icon" width="8" heigth="8">
+            <button class="modal-close-btn" type="button" data-modal-close>
+                <svg class="modal-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-close">
                     </use>
                 </svg>
